# ALVR

./: test_encoder_server.cpp  test_frame_sender.c  test_server.cpp  test_socket.cpp  test_tcp_server.cpp  test_wine_socket.c  test_wine_tcp.c
.github/workflows/: build-windows-macos.yml
alvr/client_core/src/: connection.rs  sockets.rs
alvr/client_openxr/src/: lib.rs
alvr/common/src/: primitives.rs
alvr/dashboard/src/dashboard/components/: statistics.rs
alvr/filesystem/src/: lib.rs
alvr/graphics/src/: lib.rs
alvr/gui_common/src/: theme.rs
alvr/macos_bridge/: Cargo.toml  README.md  build.rs
alvr/macos_bridge/src/: alvr_sink.rs  bgra.rs  bgra_to_nv12.metal  contract.rs  encoder.rs  iosurface_3d.rs  iosurface_handoff_protocol.h  iosurface_synthetic.rs  lib.rs  main.rs  metal.rs  metal_converter.mm  native_probe.rs  native_source.c  native_source.rs  probe.rs  shared_memory.rs  surface.rs  synthetic.rs  tracking_feedback.rs
alvr/packets/src/: lib.rs
alvr/server_core/src/: c_api.rs  connection.rs  lib.rs  logging_backend.rs
alvr/server_openvr/: build.rs
alvr/server_openvr/cpp/alvr_server/: HMD.cpp
alvr/server_openvr/cpp/platform/macos/: CEncoder.cpp  CEncoder.h
alvr/server_openvr/cpp/platform/win32/: CEncoder.cpp  CEncoder.h  VideoEncoderSharedMem.cpp  VideoEncoderSharedMem.h  VideoEncoderSocket.cpp  VideoEncoderSocket.h  VideoEncoderVPL.cpp  VideoEncoderVPL.h
alvr/server_openvr/cpp/shared/: alvr_shm_protocol.h
alvr/server_openvr/src/: lib.rs
alvr/session/: build.rs
alvr/session/src/: settings.rs
